force-app/main/default/objects/User_Story__c/fields/Business_Driver__c.field-meta.xml
<CustomField>
    <fullName>Business_Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Driver</label>
    <referenceTo>Business_Driver__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>