force-app/main/default/objects/User_Story__c/fields/Cap_ID__c.field-meta.xml
<CustomField>
    <fullName>Cap_ID__c</fullName>
    <description>Capability ID</description>
    <label>Cap_ID</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>