force-app/main/default/objects/User_Story__c/fields/Capability__c.field-meta.xml
<CustomField>
    <fullName>Capability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capability</label>
    <referenceTo>Capability__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>