force-app/main/default/objects/User_Story__c/fields/Capability_Category__c.field-meta.xml
<CustomField>
    <fullName>Capability_Category__c</fullName>
    <label>Capability Category</label>
    <length>30</length>
    <type>Text</type>
</CustomField>