force-app/main/default/objects/User_Story__c/fields/Level_3_Process__c.field-meta.xml
<CustomField>
    <fullName>Level_3_Process__c</fullName>
    <label>Level 3 Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>