force-app/main/default/objects/User_Story__c/fields/Service_Center_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Service_Center_Assessment__c</fullName>
    <description>Notes from the strategy center assessment</description>
    <label>Service Center Assessment</label>
    <type>TextArea</type>
</CustomField>