force-app/main/default/objects/User_Story__c/fields/Tentative_Release__c.field-meta.xml
<CustomField>
    <fullName>Tentative_Release__c</fullName>
    <label>Tentative Release</label>
    <length>30</length>
    <type>Text</type>
</CustomField>