force-app/main/default/objects/User_Story__c/fields/User_Story_Description__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Description__c</fullName>
    <label>User Story Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>