force-app/main/default/objects/User_Story__c/fields/User_Story_Notes__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Notes__c</fullName>
    <label>User Story Notes</label>
    <type>TextArea</type>
</CustomField>