force-app/main/default/objects/User_Story__c/fields/User_Story_Number__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Number__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>User Story Number</label>
    <type>AutoNumber</type>
</CustomField>