force-app/main/default/objects/User_Story__c/fields/User_Story_Source__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Source__c</fullName>
    <description>Where did we get the user story</description>
    <label>User Story Source</label>
    <length>90</length>
    <type>Text</type>
</CustomField>